public/static/defaultsite/mobile-v2/css/styles-maverick.css
:root {
    --color-primary: #ff3903;
    --color-primary-60: #310057;
    --color-primary-40: #fff0ec;
    --color-primary-41: #751900;
    --color-primary-42: #333333;
    --color-yellow: #ffa952;
    --color-yellow-40: #ffc485;
    --color-pink: #fcad97;
    --color-black: #1e1e1e;
    --color-black-60: #171717;
    --color-black-40: #2e2d2e;
    --color-white: #fff;
    --color-white-20: #dcdcdc;
    --color-gray: #514f4f;
    --font-inter: "Inter", sans-serif;
    --font-nunito: "Nunito Sans", sans-serif;
    --font-redhat: "Red Hat Display", sans-serif;
    --font-outfit: "Outfit", sans-serif;
}
@-ms-viewport {
    width: device-width;
}
html,
body {
    height: 100%;
}
img {
    color: transparent;
    vertical-align: middle;
}
article {
    margin: 0;
}
.line-clamp-3 {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    -webkit-box-pack: end;
}
.line-clamp-4 {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    -webkit-box-pack: end;
}
.line-clamp-5 {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 5;
    -webkit-box-orient: vertical;
    -webkit-box-pack: end;
}
.line-clamp-6 {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 6;
    -webkit-box-orient: vertical;
    -webkit-box-pack: end;
}
.animate {
    --delay: 0ms;
    opacity: 0;
    transition: opacity 800ms var(--delay),
        transform 800ms cubic-bezier(0.13, 0.07, 0.26, 0.99) var(--delay);
}
.animate--fadeIn {
    transform: scale(1, 0.95);
}
.animate--fadeInUp {
    transform: translate3d(0, 1rem, 0);
}
.animate--fadeInLeft {
    transform: translate3d(-1rem, 0, 0);
}
.animate--fadeInRight {
    transform: translate3d(1rem, 0, 0);
}
.animate--fadeInDown {
    transform: translate3d(0, -1rem, 0);
}
.is-visible .animate {
    opacity: 1;
    transform: scale(1, 1) translate3d(0, 0, 0);
}

[data-theme="yellow"] .header .logo-section-3,
[data-theme="yellow"] .header .nav-open {
    filter: invert(1) grayscale(2) brightness(100);
}

[data-theme="yellow"] .header .dark\:svg-stroke-white path {
    stroke: var(--color-white);
}
[data-theme="yellow"] .header .dark\:svg-stroke-black path {
    stroke: var(--color-black);
}
[data-theme="yellow"] .header .dark\:svg-fill-white path {
    fill: var(--color-white);
}
[data-theme="yellow"] .header .dark\:svg-fill-black path {
    fill: var(--color-black);
}
[data-theme="yellow"] .header .dark\:svg-both-white path {
    stroke: var(--color-white);
    fill: var(--color-white);
}
[data-theme="yellow"] .header .dark\:svg-both-black path {
    stroke: var(--color-black);
    fill: var(--color-black);
}
[data-theme="yellow"] .indicator .indicator-bullet {
    border-color: var(--color-primary-40);
    background-color: var(--color-primary-40);
}
[data-theme="yellow"] .indicator .indicator-bullet-active {
    background-color: var(--color-black);
}
.dark .dark\:bg-black {
    background-color: var(--color-black);
}
.dark .dark\:bg-black-60 {
    background-color: var(--color-black-60);
}
.dark .dark\:bg-black-40 {
    background-color: var(--color-black-40);
}
.dark .dark\:bg-white {
    background-color: var(--color-white);
}
.dark .dark\:bg-white-20 {
    background-color: var(--color-white-20);
}
.dark .dark\:bg-primary {
    background-color: var(--color-primary);
}
.dark .dark\:bg-primary-41 {
    background-color: var(--color-primary-41);
}
.dark .dark\:bg-primary-60 {
    background-color: var(--color-primary-60);
}
.dark .dark\:bg-primary-40 {
    background-color: var(--color-primary-40);
}
.dark .dark\:bg-yellow {
    background-color: var(--color-yellow);
}
.dark .dark\:bg-yellow-40 {
    background-color: var(--color-yellow-40);
}
.dark .dark\:bg-gray {
    background-color: var(--color-gray);
}
.dark .dark\:border-black {
    border-color: var(--color-black);
}
.dark .dark\:border-black-60 {
    border-color: var(--color-black-60);
}
.dark .dark\:border-black-40 {
    border-color: var(--color-black-40);
}
.dark .dark\:border-white {
    border-color: var(--color-white);
}
.dark .dark\:border-white-20 {
    border-color: var(--color-white-20);
}
.dark .dark\:border-primary {
    border-color: var(--color-primary);
}
.dark .dark\:border-primary-41 {
    border-color: var(--color-primary-41);
}
.dark .dark\:border-primary-60 {
    border-color: var(--color-primary-40);
}
.dark .dark\:border-primary-40 {
    border-color: var(--color-primary-40);
}
.dark .dark\:border-yellow {
    border-color: var(--color-yellow);
}
.dark .dark\:border-yellow-40 {
    border-color: var(--color-yellow-40);
}
.dark .dark\:text-black {
    color: var(--color-black);
}
.dark .dark\:text-black-60 {
    color: var(--color-black-60);
}
.dark .dark\:text-black-40 {
    color: var(--color-black-40);
}
.dark .dark\:text-white {
    color: var(--color-white);
}
.dark .dark\:text-white-20 {
    color: var(--color-white-20);
}
.dark .dark\:text-primary {
    color: var(--color-primary);
}
.dark .dark\:text-primary-60 {
    color: var(--color-primary-60);
}
.dark .dark\:text-primary-40 {
    color: var(--color-primary-40);
}
.dark .dark\:text-yellow {
    color: var(--color-yellow);
}
.dark .dark\:text-yellow-40 {
    color: var(--color-yellow-40);
}
.dark .dark\:text-gray {
    color: var(--color-gray);
}
.dark .dark\:img-white {
    filter: invert(1) grayscale(2) brightness(100);
}
.dark .dark\:svg-stroke-white path {
    stroke: var(--color-white);
}
.dark .dark\:svg-stroke-black path {
    stroke: var(--color-black);
}
.dark .dark\:svg-fill-white path {
    fill: var(--color-white);
}
.dark .dark\:svg-fill-black path {
    fill: var(--color-black);
}
.dark .dark\:svg-both-white path {
    stroke: var(--color-white);
    fill: var(--color-white);
}
/* ... */

